[package]
name = "misc-terminal"
version = "0.1.0"
edition = "2021"
authors = ["ColdCalzone"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
dhat-heap = ["dep:dhat"]    # if you are doing heap profiling
dhat-ad-hoc = ["dep:dhat"]  # if you are doing ad hoc profiling

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
dhat = { version = "0.3.3", optional = true }
macro_hash = { path = "macro_hash/" }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
debug = 1
